IREER-157 Added batch commit for BeneficiaryRuleBuilderConsumer (#32)
* IREER-157 Added batch commit for BeneficiaryRuleBuilderConsumer

* IREER-157 Fixed BeneficiaryRuleBuilderMediator buffer

* IREER-157 fix performance log

* IREER-157 Initializing batch commit for admissibilityProcessor

* IREER-157 Added batch commit test in AdmissibilityProcessorConfigTest

* IREER-157 added use case test

* IREER-157 fix AdmissibilityEvaluatorMediatorServiceImpl

Co-authored-by: GiovanaSolorzano <gisolorz@emeal.nttdata.com>